added login and signup page

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,10 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileActivity">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="log out"
+        android:id="@+id/profileLogoutBtn"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_centerInParent="true"
+        android:id="@+id/profileTxt"
         android:layout_height="wrap_content"
         android:text="THIS IS THE PROFILE OF THE USER"/>
 
