--- a/app/src/main/res/menu/draw_menu.xml
+++ b/app/src/main/res/menu/draw_menu.xml
@@ -5,13 +5,13 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_message"
-            android:icon="@drawable/ic_message"
-            android:title="Message" />
+            android:id="@+id/nav_Recipe"
+            android:icon="@drawable/ic_outdoor_grill"
+            android:title="Recipe" />
         <item
-            android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_profile"
-            android:title="Profile" />
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_baseline_home"
+            android:title="Home" />
     </group>
 
     <item android:title="Communicate">
