--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -16,9 +16,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_gravity="right"
-        android:background="@color/teal_200"
+        android:src="@drawable/ic_profile"
         android:elevation="4dp"
-        android:scaleType="fitXY"
         android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar" />
 
 
