--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,4 +32,13 @@
         android:layout_gravity="start"
         app:menu="@menu/draw_menu" />
 
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/loadingProgress"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_centerInParent="true"
+        android:foregroundTint="@color/teal_200"
+        android:indeterminate="true"
+        android:visibility="visible" />
+
 </androidx.drawerlayout.widget.DrawerLayout>
