Added Main page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,22 +5,29 @@
     android:id="@+id/draw_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".MainActivity"
-    tools:openDrawer="start">
+    tools:context=".MainActivity">
+<!--    tools:openDrawer="start"> this code will show in design-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
         <include layout="@layout/toolbar_layout" />
 
         <FrameLayout
-            android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:id="@+id/fragment_container"/>
+
+<!--        <androidx.core.widget.ContentLoadingProgressBar-->
+<!--            android:id="@+id/loadingProgress"-->
+<!--            android:layout_width="20dp"-->
+<!--            android:layout_height="20dp"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            android:foregroundTint="@color/teal_200"-->
+<!--            android:indeterminate="true"-->
+<!--            android:visibility="visible" />-->
 
     </LinearLayout>
 
@@ -28,17 +35,11 @@
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header"
         android:layout_gravity="start"
         app:menu="@menu/draw_menu" />
 
-    <androidx.core.widget.ContentLoadingProgressBar
-        android:id="@+id/loadingProgress"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_centerInParent="true"
-        android:foregroundTint="@color/teal_200"
-        android:indeterminate="true"
-        android:visibility="visible" />
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
