--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -17,12 +17,17 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="THIS IS THE PROFILE OF THE USER" />
+<FrameLayout
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:id="@+id/homeFrame"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:layout_centerInParent="true"
         android:indeterminate="true" />
 
