--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,10 +6,13 @@
 
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:id="@+id/logoImage"
+        android:scaleType="fitXY"
         android:layout_centerInParent="true"
         android:src="@drawable/logo"/>
+
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
