--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,26 +9,58 @@
         android:id="@+id/profileLogoutBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:text="log out" />
 
+    <RelativeLayout
+        android:id="@+id/userLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profileImage"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/sponge" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/profileName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/profileImage"
+            android:layout_centerHorizontal="true"
+            android:focusableInTouchMode="false"
+            android:longClickable="true"
+            android:paddingTop="50dp"
+            android:singleLine="true"
+            android:text="ProfileName" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            android:src="@drawable/ic_baseline_done_24"
+            android:layout_toRightOf="@id/profileName"
+            android:layout_below="@id/profileImage"
+            android:layout_marginStart="30dp"/>
+    </RelativeLayout>
+
     <TextView
-        android:id="@+id/profileTxt"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="THIS IS THE PROFILE OF THE USER" />
-<FrameLayout
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:id="@+id/homeFrame"/>
+        android:id="@+id/temp"
+        android:layout_below="@id/userLayout"
+        android:paddingTop="30dp" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
         android:layout_centerInParent="true"
-        android:indeterminate="true" />
+        android:indeterminate="true"
+        android:visibility="invisible" />
 
 </RelativeLayout>
