--- a/app/src/main/res/menu/draw_menu.xml
+++ b/app/src/main/res/menu/draw_menu.xml
@@ -9,9 +9,14 @@
             android:icon="@drawable/ic_baseline_home"
             android:title="Home" />
         <item
+        android:id="@+id/nav_profile"
+        android:icon="@drawable/ic_profile"
+        android:title="Profile" />
+        <item
             android:id="@+id/nav_Recipe"
             android:icon="@drawable/ic_outdoor_grill"
             android:title="Recipe" />
+
 
     </group>
 
