--- a/app/src/main/res/layout/card_product.xml
+++ b/app/src/main/res/layout/card_product.xml
@@ -5,28 +5,30 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="2dp">
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/productCardView"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        card_view:cardCornerRadius="5dp"
-        android:clickable="true"
-        android:foreground="@android:color/transparent"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:foreground="@android:color/transparent"
+        card_view:cardCornerRadius="25dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <ImageView
                 android:id="@+id/proPoster"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:alpha="0.9"
-                android:background="@drawable/sponge"
-                android:scaleType="fitCenter"
+                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_alignParentEnd="true" />
+                android:alpha="0.9"
+                android:background="@drawable/temp_image"
+                android:scaleType="fitCenter" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -38,8 +40,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginRight="5dp"
                     android:layout_marginTop="2dp"
+                    android:layout_marginRight="5dp"
                     android:padding="5dp"
                     android:shadowColor="@android:color/black"
                     android:shadowRadius="2"
@@ -60,28 +62,31 @@
                     android:id="@+id/proFavourite"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:background="@android:color/transparent"
-                    android:scaleType="fitXY"
-                    card_view:srcCompat="@drawable/ic_baseline_favorite_border_24"
+                    android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true" />
+                    android:background="@android:color/transparent"
+                    android:foregroundTint="@color/purple_200"
+                    android:scaleType="fitXY"
+                    card_view:srcCompat="@drawable/ic_baseline_favorite_24" />
 
                 <ImageButton
                     android:id="@+id/addToCart"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:background="@android:color/transparent"
-                    android:scaleType="fitXY"
-                    android:foregroundTint="@color/purple_200"
-                    android:layout_marginLeft="10dp"
-                    card_view:srcCompat="@drawable/ic_baseline_shopping_cart_24"
                     android:layout_alignTop="@+id/proFavourite"
-                    android:layout_alignParentStart="true" />
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="10dp"
+                    android:background="@android:color/transparent"
+                    android:foregroundTint="@color/purple_200"
+                    android:scaleType="fitXY"
+                    card_view:srcCompat="@drawable/ic_baseline_shopping_cart_24" />
 
                 <TextView
                     android:id="@+id/proPice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
                     android:layout_gravity="bottom"
                     android:layout_marginRight="10dp"
                     android:shadowColor="@android:color/black"
@@ -89,13 +94,10 @@
                     android:text="Price"
                     android:textAlignment="center"
                     android:textColor="#000000"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentEnd="true"
                     tools:ignore="RtlCompat" />
             </RelativeLayout>
 
         </RelativeLayout>
-
 
 
     </com.google.android.material.card.MaterialCardView>
