--- a/app/src/main/res/layout/recipe_cardview.xml
+++ b/app/src/main/res/layout/recipe_cardview.xml
@@ -10,7 +10,10 @@
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
+        android:id="@+id/recipe_cardView"
         android:layout_height="match_parent"
+        android:clickable="true"
+        android:longClickable="true"
         android:layout_margin="8dp">
 
         <LinearLayout
@@ -24,7 +27,7 @@
                 android:layout_height="194dp"
                 android:id="@+id/recipe_image"
                 android:scaleType="fitCenter"
-                android:src="@drawable/sponge"/>
+                android:src="@drawable/temp_image"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
