--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -6,7 +6,7 @@
     android:layout_height="?attr/actionBarSize"
     android:background="@color/design_default_color_primary"
     android:elevation="4dp"
-    android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
 
