--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.ProjectVI" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/grey_darken_4</item>
+        <item name="colorPrimaryVariant">@color/grey_darken_1</item>
+        <item name="colorOnPrimary">@color/grey_darken_2</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
@@ -12,6 +12,12 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:textColor">@color/grey_lighten_3</item>
+        <item name="background">@color/grey_lighten_1</item>
     </style>
 
+    <style name="Theme.ProjectVI." parent="ThemeOverlay.MaterialComponents.Toolbar.Primary">
+        <item name="android:colorBackground">@color/green</item>
+        <item name="android:background">@color/green</item>
+    </style>
 </resources>
